# Project-Evaluator

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-16-project-evaluator.md
docs/superpowers/specs/: 2026-05-16-project-evaluator-agent-design.md
src/project_evaluator/: config.py
src/project_evaluator/db/: schema.sql  store.py
src/project_evaluator/tools/: repo.py
tests/: conftest.py  test_config.py  test_package.py  test_repo.py  test_store.py
