[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-evaluator"
dynamic = ["version"]
description = "Conversational agent that evaluates the technology decisions of a git repo"
requires-python = ">=3.11"
dependencies = [
    "deepagents",
    "langchain-openai",
    "langsmith",
    "GitPython",
    "rich",
    "pydantic>=2",
    "httpx",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
pe = "project_evaluator.cli:main"
project-evaluator = "project_evaluator.cli:main"

[tool.hatch.version]
path = "src/project_evaluator/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/project_evaluator"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["live: tests that call real LLM/network (deselected by default)"]
addopts = "-m 'not live'"
